fixed the modal scrollbar for admin

--- a/src/static_common/css/app.css
+++ b/src/static_common/css/app.css
@@ -116,7 +116,13 @@ body.modal-open {
   padding-right:inherit !important;
 }
 
-.modal-open .modal {
+/*.modal-open .modal {
+    overflow: hidden;
+  
+}*/
+
+
+.modal-open .modal.update-modal {
     overflow: hidden;
   
 }
